--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 
     <div
-      class="mx-auto  lg:max-w-7xl rounded-md border md:border-2 shadow-black border-[#E0B791]   py-10 relative top-[7%] iphone6:top-[15%] md:top-auto flex flex-col  items-center justify-center   ">
+      class="mx-auto  md:max-w-[1120px] rounded-md border md:border-2 shadow-black border-[#E0B791]   py-10 relative top-[7%] iphone6:top-[15%] md:top-auto flex flex-col  items-center justify-center   ">
 
 
       <div
         class=" xs:m-1 md:p-0 bg-transparent w-full px-1 flex flex-col items-center pt-5 md:py-0 relative [z-index:3] md:top-auto mx-auto md:w-[90%] text-center ">
 
 
-        <p class="  text-center mb-3 px-1 text-base md:text-5xl font-bold text-[#2d2d2d] ml-1   subheading w-fit  ">
+        <p class="  text-center mb-3 px-1 text-base md:text-4xl font-bold text-[#2d2d2d] ml-1   subheading w-fit  ">
           This is the subheadline above the main headline</p>
 
 
