--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
 <body>
 
-  <div
-    class="flex relative flex-col mx-auto md:justify-center md:items-center  h-[90vh] md:h-screen overflow-x-hidden ">
+  <div class="flex relative flex-col mx-auto items-center mt-6 md:mt-14 lg:mt-16   overflow-x-hidden ">
 
 
     <div
@@ -37,11 +36,9 @@
 
 
         <h2 class="text-2xl md:text-7xl md:[line-height:1.3] text-[#ab0303]  mb-4 text-center  heading  font-bold">
-          <span class="">
-            Create Amazing
-          </span>
+          Create Amazing
           Pages just like This! It
-          <span class=""> Starts </span> With A Headline!
+          Starts With A Headline!
 
         </h2>
 
