--- a/index.html
+++ b/index.html
@@ -10,67 +10,112 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Anton&family=Anybody:ital,wght@1,300;1,400&family=Changa:wght@500&family=Dancing+Script:wght@400;500;600;700&family=Grape+Nuts&family=Inter:wght@300;400;500;600;700&family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&family=Merriweather:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@300;400;500;700&family=Permanent+Marker&family=Poppins:ital,wght@0,500;0,600;0,700;1,300;1,400&family=Prompt:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&family=Roboto:ital,wght@0,400;0,500;0,700;1,400&family=Rubik+Bubbles&family=Send+Flowers&family=Source+Sans+Pro:ital,wght@0,400;0,600;0,700;1,600&family=Tajawal&family=Vazirmatn:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
-  <script src="https://kit.fontawesome.com/70163f29d0.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./dist/styles.css">
   <title>quiz-form</title>
 </head>
 
 <body>
 
-  <div class="flex relative flex-col mx-auto items-center mt-6 md:mt-14 lg:mt-16   overflow-x-hidden ">
+  <div
+    class="tw-flex tw-relative tw-flex-col tw-mx-auto tw-items-center tw-mt-6 md:tw-mt-14 lg:tw-mt-4   tw-overflow-x-hidden ">
 
 
     <div
-      class="mx-auto  md:max-w-[1120px] rounded-md border md:border-2 shadow-black border-[#E0B791]   py-10 relative top-[7%] iphone6:top-[15%] md:top-auto flex flex-col  items-center justify-center   ">
+      class="tw-mx-auto tw-w-[95%] md:tw-w-[1120px] tw-rounded-md tw-border md:tw-border-2 shadow-black tw-border-[#E0B791]   tw-py-5 tw-relative tw-top-[7%] iphone6:tw-top-[15%] md:tw-top-auto tw-flex tw-flex-col  tw-items-center tw-justify-center   ">
 
 
       <div
-        class=" xs:m-1 md:p-0 bg-transparent w-full px-1 flex flex-col items-center pt-5 md:py-0 relative [z-index:3] md:top-auto mx-auto md:w-[90%] text-center ">
+        class=" xs:tw-m-1 md:tw-p-0 tw-bg-transparent tw-w-full tw-px-1  tw-items-center tw-pt-5 md:tw-py-0 tw-relative tw-z-[3] md:tw-top-auto tw-mx-auto md:tw-w-[90%] tw-text-center ">
 
+        <!-- option-border  -->
+        <div class="tw-border tw-border-orange-300 tw-relative tw-w-full ">
+          <div
+            class="tw-absolute tw-bottom-[100%]  tw-right-0 tw-text-white tw-bg-orange-300 tw-w-20 tw-flex tw-justify-end tw-px-2 tw-rounded-t-md ">
+            <button class="tw-flex tw-items-center tw-py-1">
+              <span class="material-icons text-white">
+                settings
+              </span>
+            </button>
+          </div>
+          <p
+            class="  tw-text-center tw-mb-3 tw-px-1 tw-text-base md:tw-text-4xl tw-font-bold tw-text-[#2d2d2d] tw-ml-1   subheading w-fit  ">
+            This is the subheadline above the main headline</p>
+        </div>
+        <!-- option-border  -->
+        <div class="tw-border tw-border-orange-300 tw-relative tw-w-full ">
+          <div
+            class="tw-absolute tw-bottom-[100%]  tw-right-0 tw-text-white tw-bg-orange-300 tw-w-20 tw-flex tw-justify-end tw-px-2 tw-rounded-t-md ">
+            <button class="tw-flex tw-items-center tw-py-1">
+              <span class="material-icons text-white">
+                settings
+              </span>
+            </button>
+          </div>
+          <h2
+            class="tw-text-2xl md:tw-text-7xl md:tw-leading-[1.3] tw-text-[#ab0303]  tw-mb-4 tw-text-center  heading  tw-font-bold">
+            Create Amazing
+            Just Like This It Starts With Headline
+            !
 
-        <p class="  text-center mb-3 px-1 text-base md:text-4xl font-bold text-[#2d2d2d] ml-1   subheading w-fit  ">
-          This is the subheadline above the main headline</p>
+          </h2>
 
-
-        <h2 class="text-2xl md:text-7xl md:[line-height:1.3] text-[#ab0303]  mb-4 text-center  heading  font-bold">
-          Create Amazing
-          Pages just like This! It
-          Starts With A Headline!
-
-        </h2>
-
-
-        <p class=" text-sm md:text-4xl     call  text-[#2d2d2d] ">
+        </div>
+        <p class=" tw-text-sm md:tw-text-4xl     call  tw-text-[#2d2d2d] ">
           Call To Action Statement Goes Here!</p>
 
       </div>
-      <form action="" class=" flex flex-col w-full space-y-4 mb-2 mt-10 font-semibold items-center">
+
+      <div id="video" class="tw-hidden tw-group tw-p-1 tw-mt-2 tw-border-gray-500 tw-w-full tw-text-center tw-mb-1  ">
+
+        <iframe class=" tw-aspect-video md:tw-aspect-auto md:tw-h-[480px] md:tw-w-[85%] tw-mx-auto "
+          src="https://www.youtube.com/embed/tf88GFLtj18?autoplay=0&amp;controls=0&amp;showinfo=0&amp;title=0&amp;rel=0&amp;wmode=transparent"
+          allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen"
+          mozallowfullscreen="mozallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"
+          oallowfullscreen="oallowfullscreen" msallowfullscreen="msallowfullscreen" id="" wmode="opaque"></iframe>
+
+      </div>
+
+      <form action="" class=" tw-flex tw-flex-col tw-w-full  tw-mb-2  tw-font-semibold tw-items-center">
 
         <input type="email" placeholder="Your Email Address Here ..."
-          class="  rounded-md md:w-[80%] w-[95%]  border-2 border-gray-300 active:outline-none focus:outline-none  shadow-lg  px-4 py-3 ">
+          class=" tw-mb-2 tw-rounded-md md:tw-w-[80%] tw-w-[95%]  tw-border-2 tw-border-gray-300 active:tw-outline-none focus:tw-outline-none  tw-shadow-lg  tw-px-4 tw-py-3 ">
         <button
-          class="cursor-pointer bg-[#6ABF3A] hover:bg-[#729b5a] text-white border-8 border-transparent  font-bold  text-center rounded-md  py-3 md:max-w-[30rem] md:text-5xl   w-[90%]   block  transition-all hover:bg-gradient-to-l  ease-in-out text-2xl ">
+          class="tw-cursor-pointer tw-bg-[#6ABF3A] hover:tw-bg-[#729b5a] tw-text-white tw-border-8 tw-border-transparent  tw-font-bold  tw-text-center tw-rounded-md  tw-py-3 md:tw-max-w-[30rem] md:tw-text-5xl   tw-w-[90%]   tw-block  tw-transition-all hover:tw-bg-gradient-to-l  tw-ease-in-out tw-text-2xl ">
           DOWNLOAD
           NOW </button>
       </form>
       <div
-        class="flex px-1 w-full  justify-center items-center space-x-2 mt-5 text-center flex-col md:flex-row space-y-2 md:space-y-0">
-        <!-- <i class="fa fa-lock block  text-[0.7rem]  "></i> -->
+        class="tw-flex tw-px-1 tw-w-full  tw-justify-center tw-items-center tw-space-x-2 tw-mt-5 tw-text-center tw-flex-col md:tw-flex-row tw-space-y-2 md:tw-space-y-0">
 
-        <p class=" align-baseline text-sm md:text-base disclaimer font-bold text-[#2d2d2d] ">We respect your privacy,
-          Your
-          email
-          address will
-          never be
-          shared or sold</p>
+        <!-- options border -->
+        <div class="tw-border tw-border-orange-300 tw-relative tw-w-full ">
+          <div
+            class="tw-absolute tw-bottom-[100%]  tw-right-0 tw-text-white tw-bg-orange-300 tw-w-20 tw-flex tw-justify-end tw-px-2 tw-rounded-t-md ">
+            <button class="tw-flex tw-items-center tw-py-1">
+              <span class="material-icons text-white">
+                settings
+              </span>
+            </button>
+          </div>
+          <p class=" tw-align-baseline tw-text-sm md:tw-text-base disclaimer tw-font-bold tw-text-[#2d2d2d] ">We respect
+            your
+            privacy,
+            Your
+            email
+            address will
+            never be
+            shared or sold</p>
+        </div>
       </div>
     </div>
   </div>
   </div>
   </div>
+  <script src="./index.js"></script>
+
 </body>
 
 </html>
