--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       </div>
 
-      <div id="video" class="tw-hidden tw-group tw-p-1 tw-mt-2 tw-border-gray-500 tw-w-full tw-text-center tw-mb-1  ">
+      <div id="video" class=" tw-group tw-p-1 tw-mt-2 tw-border-gray-500 tw-w-full tw-text-center tw-mb-1  ">
 
         <iframe class=" tw-aspect-video md:tw-aspect-auto md:tw-h-[480px] md:tw-w-[85%] tw-mx-auto "
           src="https://www.youtube.com/embed/tf88GFLtj18?autoplay=0&amp;controls=0&amp;showinfo=0&amp;title=0&amp;rel=0&amp;wmode=transparent"
