--- a/index.html
+++ b/index.html
@@ -32,28 +32,30 @@
 
         <!-- option-border  -->
         <div class="tw-border tw-border-orange-300 tw-relative tw-w-full ">
-          <div
-            class="tw-absolute tw-bottom-[100%]  tw-right-0 tw-text-white tw-bg-orange-300 tw-w-20 tw-flex tw-justify-end tw-px-2 tw-rounded-t-md ">
-            <button class="tw-flex tw-items-center tw-py-1">
-              <span class="material-icons text-white">
-                settings
-              </span>
-            </button>
-          </div>
+          <!-- config option  -->
+          <button
+            class="tw-items-center tw-py-1 tw-absolute tw-bottom-[100%]  tw-right-0 tw-text-white tw-bg-orange-300  tw-flex tw-justify-end tw-px-2 tw-rounded-t-md">
+            <span class="material-icons text-white">
+              settings
+            </span>
+          </button>
+
           <p
             class="  tw-text-center tw-mb-3 tw-px-1 tw-text-base md:tw-text-4xl tw-font-bold tw-text-[#2d2d2d] tw-ml-1   subheading w-fit  ">
             This is the subheadline above the main headline</p>
+
         </div>
         <!-- option-border  -->
         <div class="tw-border tw-border-orange-300 tw-relative tw-w-full ">
-          <div
-            class="tw-absolute tw-bottom-[100%]  tw-right-0 tw-text-white tw-bg-orange-300 tw-w-20 tw-flex tw-justify-end tw-px-2 tw-rounded-t-md ">
-            <button class="tw-flex tw-items-center tw-py-1">
-              <span class="material-icons text-white">
-                settings
-              </span>
-            </button>
-          </div>
+
+          <!-- config option  -->
+          <button
+            class="tw-items-center tw-py-1 tw-absolute tw-bottom-[100%]  tw-right-0 tw-text-white tw-bg-orange-300  tw-flex tw-justify-end tw-px-2 tw-rounded-t-md">
+            <span class="material-icons text-white">
+              settings
+            </span>
+          </button>
+
           <h2
             class="tw-text-2xl md:tw-text-7xl md:tw-leading-[1.3] tw-text-[#ab0303]  tw-mb-4 tw-text-center  heading  tw-font-bold">
             Create Amazing
@@ -63,9 +65,25 @@
           </h2>
 
         </div>
-        <p class=" tw-text-sm md:tw-text-4xl     call  tw-text-[#2d2d2d] ">
-          Call To Action Statement Goes Here!</p>
 
+        <!-- option-border  -->
+        <div class="tw-border tw-border-orange-300 tw-relative tw-w-full ">
+
+          <!-- option button  -->
+          <button
+            class="tw-items-center tw-py-1 tw-absolute tw-bottom-[100%]  tw-right-0 tw-text-white tw-bg-orange-300  tw-flex tw-justify-end tw-px-2 tw-rounded-t-md">
+            <span class="material-icons text-white">
+              settings
+            </span>
+          </button>
+
+
+          <p class=" tw-text-sm md:tw-text-4xl     call  tw-text-[#2d2d2d] ">
+            Call To Action Statement Goes Here!</p>
+
+
+
+        </div>
       </div>
 
       <div id="video" class=" tw-group tw-p-1 tw-mt-2 tw-border-gray-500 tw-w-full tw-text-center tw-mb-1  ">
@@ -92,14 +110,15 @@
 
         <!-- options border -->
         <div class="tw-border tw-border-orange-300 tw-relative tw-w-full ">
-          <div
-            class="tw-absolute tw-bottom-[100%]  tw-right-0 tw-text-white tw-bg-orange-300 tw-w-20 tw-flex tw-justify-end tw-px-2 tw-rounded-t-md ">
-            <button class="tw-flex tw-items-center tw-py-1">
-              <span class="material-icons text-white">
-                settings
-              </span>
-            </button>
-          </div>
+
+          <!-- config button  -->
+          <button
+            class="tw-items-center tw-py-1 tw-absolute tw-bottom-[100%]  tw-right-0 tw-text-white tw-bg-orange-300  tw-flex tw-justify-end tw-px-2 tw-rounded-t-md">
+            <span class="material-icons text-white">
+              settings
+            </span>
+          </button>
+
           <p class=" tw-align-baseline tw-text-sm md:tw-text-base disclaimer tw-font-bold tw-text-[#2d2d2d] ">We respect
             your
             privacy,
