--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 
 <body>
 
-  <div
-    class="tw-flex tw-relative tw-flex-col tw-mx-auto tw-items-center tw-mt-6 md:tw-mt-14 lg:tw-mt-4   tw-overflow-x-hidden ">
+  <div class=" tw-relative  tw-mx-auto tw-items-center tw-mt-6 md:tw-mt-14 lg:tw-mt-4   tw-overflow-x-hidden ">
 
 
     <div
-      class="tw-mx-auto tw-w-[95%] md:tw-w-[1120px] tw-rounded-md tw-border md:tw-border-2 shadow-black tw-border-[#E0B791]   tw-py-5 tw-relative tw-top-[7%] iphone6:tw-top-[15%] md:tw-top-auto tw-flex tw-flex-col  tw-items-center tw-justify-center   ">
+      class="tw-mx-auto  md:tw-max-w-[1120px] tw-rounded-md tw-border md:tw-border-2 shadow-black tw-border-[#E0B791]   tw-py-5 tw-relative tw-top-[7%] iphone6:tw-top-[15%] md:tw-top-auto tw-flex tw-flex-col  tw-items-center tw-justify-center   ">
 
 
       <div
@@ -57,7 +56,7 @@
           </button>
 
           <h2
-            class="tw-text-2xl md:tw-text-7xl md:tw-leading-[1.3] tw-text-[#ab0303]  tw-mb-4 tw-text-center  heading  tw-font-bold">
+            class="tw-text-2xl md:tw-text-6xl md:tw-leading-[1.2] tw-text-[#ab0303]  tw-mb-4 tw-text-center  heading  tw-font-bold">
             Create Amazing
             Just Like This It Starts With Headline
             !
@@ -88,7 +87,7 @@
 
       <div id="video" class=" tw-group tw-p-1 tw-mt-2 tw-border-gray-500 tw-w-full tw-text-center tw-mb-1  ">
 
-        <iframe class=" tw-aspect-video md:tw-aspect-auto md:tw-h-[480px] md:tw-w-[85%] tw-mx-auto "
+        <iframe class="tw-hidden tw-aspect-video md:tw-aspect-auto tw-w-full md:tw-h-[480px] md:tw-w-[85%] tw-mx-auto "
           src="https://www.youtube.com/embed/tf88GFLtj18?autoplay=0&amp;controls=0&amp;showinfo=0&amp;title=0&amp;rel=0&amp;wmode=transparent"
           allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen"
           mozallowfullscreen="mozallowfullscreen" webkitallowfullscreen="webkitallowfullscreen"
